v1.2.6
-------------------------------------------------------------------------------- 
 * Adding 'accept-encoding' to headers used in PUSHed resources - as sent by
   the initiating request.

v1.2.5
-------------------------------------------------------------------------------- 
 * fixes a deadlock that caused connections to get stuck in output, locking
   up the connection and a server thread forever. Thanks to @FrankStolle for
   reporting and getting the necessary data.
 
v1.2.4
-------------------------------------------------------------------------------- 
 * removed all H2*Timeout directives. HTTP/2 uses not the same Timeout and
   KeepAliveTimeout as HTTP/1.1.
 * enforcing the Timeout value on read and write operations from the selected
   virtual host (TLS+SNI). httpd was wrongly using the defaults set in the
   base server config.
 * add DEBUG logging to see if writing properly returns to catch a connection
   hanger reported in #79
 
v1.2.3
-------------------------------------------------------------------------------- 
 * connection timeout handling when requests do not report back
 * setting correct server config for event mpm on main connection, so that
   timeouts, keepalives use the correct values
 * fixes event hack to match changes in structures

v1.2.2
-------------------------------------------------------------------------------- 
 * removed unused code
 
v1.2.1
-------------------------------------------------------------------------------- 
 * fixed compilation error because of stupid own log2n function
 * fixed cache digest calculation to spit out same values as Kazuho Oku's
   reference implementation (https://github.com/kazuho/h2-cache-digest).
 
v1.2.0
-------------------------------------------------------------------------------- 
 * Each connection now has a push diary where already pushed resources are
   recorded (as 64-bit subsets sha256 URL hashes). The maximum size of a diary